footer text alignment fixes

--- a/src/publications/1903/publication.scss
+++ b/src/publications/1903/publication.scss
@@ -82,6 +82,11 @@ header{
 .articleTitles{
     color: $black_5 !important;
 }
+.footerText{
+    font-size: 107px !important;
+    line-height: 151.07px !important;
+    padding-right: 50px !important;
+}
 .footer-middle{
     h4{
       font-family: $roboto !important;
